[gd_scene load_steps=30 format=3 uid="uid://cdbhv0p0jfr75"]

[ext_resource type="Script" path="res://scenes/game_world/game_world.gd" id="1_4pv4x"]
[ext_resource type="Material" uid="uid://dsqe2mx1kgicf" path="res://assets/material_default.tres" id="2_ldkna"]
[ext_resource type="Script" path="res://scenes/game_world/player/player_manager.gd" id="3_cvlpu"]
[ext_resource type="Script" path="res://scenes/game_world/target_spawner.gd" id="3_tavht"]
[ext_resource type="Script" path="res://scenes/game_world/crosshair.gd" id="4_pc15u"]
[ext_resource type="Script" path="res://scenes/game_world/gameplay_ui.gd" id="5_of43n"]
[ext_resource type="Texture2D" uid="uid://1xnrooyjmggn" path="res://assets/images/hit_marker.svg" id="6_efh5s"]
[ext_resource type="Texture2D" uid="uid://nng31j22g6fh" path="res://assets/images/icons/play.svg" id="7_7rabg"]
[ext_resource type="Script" path="res://scenes/game_world/pause.gd" id="7_ffgmh"]
[ext_resource type="Theme" uid="uid://caf1fphx2xqt0" path="res://assets/themes/main_menu.tres" id="7_gwa7l"]
[ext_resource type="Texture2D" uid="uid://cmrheauks0nru" path="res://assets/images/icons/cross.svg" id="8_6pksd"]
[ext_resource type="PackedScene" uid="uid://cpoik4f7kx6aj" path="res://scenes/game_world/end_game_canvas/end_game_canvas.tscn" id="11_hrjw4"]
[ext_resource type="AudioStream" uid="uid://c1ons03xoggga" path="res://default/custom_resources/destroy_sounds/beep.ogg" id="12_xv1t2"]
[ext_resource type="Script" path="res://scenes/game_world/destroyed_sound.gd" id="13_mss18"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_hein3"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_i8euj"]
sky_material = SubResource("ProceduralSkyMaterial_hein3")

[sub_resource type="Environment" id="Environment_mlohy"]
background_mode = 1
background_color = Color(0.0666667, 0.129412, 0.227451, 1)
sky = SubResource("Sky_i8euj")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_d1v5h"]
transparency = 1
albedo_color = Color(1, 1, 1, 0)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_trh1v"]
points = PackedVector3Array(-0.125207, -0.532801, -0.480507, 0.0227831, 0.47607, 0.498884, 0.169713, 0.559144, 0.464172, 0.231051, -0.803591, 0.320455, 0.40741, 0.651043, -0.243523, -0.482789, 0.594843, 0.0822132, -0.362868, -0.682312, 0.289697, 0.469044, -0.654529, -0.0662713, -0.127444, 0.842701, -0.338103, -0.393435, -0.683942, -0.244717, 0.438255, 0.623309, 0.200849, 0.0841477, 0.977454, 0.114795, -0.0682023, -0.976458, -0.12927, 0.20055, -0.563129, -0.451454, -0.185527, 0.595453, -0.453475, -0.273363, 0.592268, 0.407754, -0.00693649, -0.476823, 0.49966, 0.375821, -0.588614, 0.316955, 0.111579, 0.563059, -0.481177, -0.41725, 0.527866, -0.270497, -0.484546, -0.596972, -0.0665097, -0.279747, 0.908561, 0.0533361, -0.250197, -0.880712, 0.205319, 0.263647, -0.902771, -0.127394, 0.293368, 0.871526, -0.157196, 0.373412, -0.526319, -0.328246, 0.499663, 0.476641, -0.00688856, 0.0531056, 0.875001, 0.324703, -0.154543, -0.590854, 0.465879, -0.0972799, -0.782358, -0.398188, -0.387649, -0.498171, 0.31565, -0.30068, -0.587995, -0.388901)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_41626"]

[sub_resource type="Theme" id="Theme_agxdx"]
Label/font_sizes/font_size = 42

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fembj"]
bg_color = Color(0, 0, 0, 0.294118)

[sub_resource type="Theme" id="Theme_p6jab"]
Label/colors/font_color = Color(1, 1, 1, 0.470588)
Label/font_sizes/font_size = 26

[sub_resource type="Animation" id="Animation_8dsmr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/GameplayUI/HitMarker:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/GameplayUI/HitMarker:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_jsqua"]
resource_name = "kill"
length = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/GameplayUI/HitMarker:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(0.5, 0.5),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.5, 1.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/GameplayUI/HitMarker:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(0.5, 0.5),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s0jl0"]
_data = {
"RESET": SubResource("Animation_8dsmr"),
"kill": SubResource("Animation_jsqua")
}

[sub_resource type="Animation" id="Animation_ybjr1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_8c12g"]
resource_name = "idle"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.05, 1.05)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y2pta"]
_data = {
"RESET": SubResource("Animation_ybjr1"),
"idle": SubResource("Animation_8c12g")
}

[node name="World" type="Node3D"]
script = ExtResource("1_4pv4x")

[node name="Timer" type="Timer" parent="."]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.998198, 0.0464176, 0.0380308, -0.0421491, 0.0912349, 0.994937, 0.0427129, -0.994747, 0.093027, 0, 20, 0)
light_color = Color(0.360784, 0.615686, 1, 1)
light_bake_mode = 1

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_mlohy")

[node name="Building" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 9, 0)
use_collision = true
size = Vector3(50, 25, 50)

[node name="CSGBox3D" type="CSGBox3D" parent="Building"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0)
operation = 2
size = Vector3(45, 24, 45)
material = ExtResource("2_ldkna")

[node name="CSGBox3D2" type="CSGBox3D" parent="Building"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -8.5, -7)
size = Vector3(50, 1, 0.852)
material = ExtResource("2_ldkna")

[node name="CSGBox3D3" type="CSGBox3D" parent="Building"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -8.5, 3)
size = Vector3(5, 5, 5)
material = ExtResource("2_ldkna")

[node name="CSGPolygon3D" type="CSGPolygon3D" parent="Building"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.5, -9, 5.5)
polygon = PackedVector2Array(0, 0, 0, 3, 8, 0)
depth = 5.0
material = ExtResource("2_ldkna")

[node name="CSGPolygon3D2" type="CSGPolygon3D" parent="Building"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -2.5, -9, 0.5)
polygon = PackedVector2Array(0, 0, 0, 3, 8, 0)
depth = 5.0
material = ExtResource("2_ldkna")

[node name="CSGPolygon3D3" type="CSGPolygon3D" parent="Building"]
transform = Transform3D(1.31134e-07, 0, -1, 0, 1, 0, 1, 0, 1.31134e-07, -2.5, -9, 5.5)
polygon = PackedVector2Array(0, 0, 0, 3, 8, 0)
depth = 5.0
material = ExtResource("2_ldkna")

[node name="PlayerPrison" type="CSGBox3D" parent="."]
transform = Transform3D(3, 0, 0, 0, 1, 0, 0, 0, 1, 0, 9, -12.0608)
material_override = SubResource("StandardMaterial3D_d1v5h")
transparency = 1.0
use_collision = true
collision_layer = 4
size = Vector3(15.6688, 20, 10)

[node name="TargetSpawner" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, -14)
script = ExtResource("3_tavht")

[node name="Player" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 3)
collision_layer = 2
collision_mask = 5
script = ExtResource("3_cvlpu")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("ConvexPolygonShape3D_trh1v")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Player/CollisionShape3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.000550747, 0.00400865, -0.000956774)
mesh = SubResource("CapsuleMesh_41626")
skeleton = NodePath("../..")

[node name="Head" type="Node3D" parent="Player"]

[node name="Camera3D" type="Camera3D" parent="Player/Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
fov = 80.0

[node name="RayCast3D" type="RayCast3D" parent="Player/Head/Camera3D"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
target_position = Vector3(0, -1000, 0)
debug_shape_custom_color = Color(1, 0, 0, 1)

[node name="Crosshair" type="Control" parent="Player/Head/Camera3D"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -0.5
offset_top = -0.5
offset_right = 0.5
offset_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource("4_pc15u")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GameplayUI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_agxdx")
script = ExtResource("5_of43n")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/GameplayUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 50.0
offset_right = -50.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="CanvasLayer/GameplayUI/MarginContainer"]
custom_minimum_size = Vector2(300, 200)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_fembj")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/GameplayUI/MarginContainer/Panel"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 302.0
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/GameplayUI/MarginContainer/Panel/MarginContainer"]
layout_mode = 2

[node name="time" type="HBoxContainer" parent="CanvasLayer/GameplayUI/MarginContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="label" type="Label" parent="CanvasLayer/GameplayUI/MarginContainer/Panel/MarginContainer/VBoxContainer/time"]
layout_mode = 2
theme = SubResource("Theme_p6jab")
text = "Time "
vertical_alignment = 1
uppercase = true

[node name="label2" type="Label" parent="CanvasLayer/GameplayUI/MarginContainer/Panel/MarginContainer/VBoxContainer/time"]
layout_mode = 2
text = "60 s"

[node name="score" type="HBoxContainer" parent="CanvasLayer/GameplayUI/MarginContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="label" type="Label" parent="CanvasLayer/GameplayUI/MarginContainer/Panel/MarginContainer/VBoxContainer/score"]
layout_mode = 2
theme = SubResource("Theme_p6jab")
text = "Score "
vertical_alignment = 1
uppercase = true

[node name="label2" type="Label" parent="CanvasLayer/GameplayUI/MarginContainer/Panel/MarginContainer/VBoxContainer/score"]
layout_mode = 2
text = "0"

[node name="accuracy" type="HBoxContainer" parent="CanvasLayer/GameplayUI/MarginContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="label" type="Label" parent="CanvasLayer/GameplayUI/MarginContainer/Panel/MarginContainer/VBoxContainer/accuracy"]
layout_mode = 2
theme = SubResource("Theme_p6jab")
text = "Accuracy "
vertical_alignment = 1
uppercase = true

[node name="label2" type="Label" parent="CanvasLayer/GameplayUI/MarginContainer/Panel/MarginContainer/VBoxContainer/accuracy"]
layout_mode = 2
text = "100%"

[node name="HitMarker" type="TextureRect" parent="CanvasLayer/GameplayUI"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(16, 16)
texture = ExtResource("6_efh5s")

[node name="AnimationKill" type="AnimationPlayer" parent="CanvasLayer/GameplayUI"]
root_node = NodePath("../../..")
libraries = {
"": SubResource("AnimationLibrary_s0jl0")
}

[node name="PressAny" type="Label" parent="CanvasLayer/GameplayUI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -269.5
offset_top = -318.0
offset_right = 269.5
offset_bottom = -257.0
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(269, 30)
text = "Shoot to start"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/GameplayUI/PressAny"]
libraries = {
"": SubResource("AnimationLibrary_y2pta")
}
autoplay = "idle"

[node name="PauseManager" type="Node" parent="CanvasLayer"]
script = ExtResource("7_ffgmh")

[node name="Pause" type="Control" parent="CanvasLayer/PauseManager"]
process_mode = 2
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("7_gwa7l")

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/PauseManager/Pause"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0745098, 0.0745098, 0.0745098, 0.34902)
metadata/_edit_use_anchors_ = true

[node name="Buttons" type="VBoxContainer" parent="CanvasLayer/PauseManager/Pause"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -153.0
offset_top = -105.0
offset_right = 153.0
offset_bottom = 105.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CanvasLayer/PauseManager/Pause/Buttons"]
layout_mode = 2
text = "Pause"
horizontal_alignment = 1

[node name="Resume" type="Button" parent="CanvasLayer/PauseManager/Pause/Buttons"]
layout_mode = 2
text = "Resume"
icon = ExtResource("7_7rabg")
alignment = 0

[node name="Menu" type="Button" parent="CanvasLayer/PauseManager/Pause/Buttons"]
layout_mode = 2
text = "Menu"
icon = ExtResource("8_6pksd")
alignment = 0

[node name="EndGameCanvas" parent="CanvasLayer" instance=ExtResource("11_hrjw4")]
visible = false

[node name="DestroyedSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_xv1t2")
script = ExtResource("13_mss18")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="shooted" from="Player" to="CanvasLayer/GameplayUI" method="_on_player_shoot"]
[connection signal="pressed" from="CanvasLayer/PauseManager/Pause/Buttons/Resume" to="CanvasLayer/PauseManager" method="_on_resume_pressed"]
[connection signal="pressed" from="CanvasLayer/PauseManager/Pause/Buttons/Menu" to="CanvasLayer/PauseManager" method="_on_menu_pressed"]
